--- a/app/app/assets/stylesheets/style.css
+++ b/app/app/assets/stylesheets/style.css
@@ -35,7 +35,7 @@ h6 {
 
 p {
   font-family: "Montserrat", sans-serif;
-  color: #7a7a7a;
+
   font-size: 14px;
   line-height: 2;
   font-weight: 500; }
@@ -57,7 +57,11 @@ ol {
   margin: 0; }
   ul li,
   ol li {
-    list-style: none; }
+	list-style: none; }
+	
+.fa-star {
+	color: orange;
+}
 
 img {
   height: auto;
@@ -1467,7 +1471,8 @@ h3 {
       .comment_area .comment-content .comment-meta .reply::after {
         display: none; }
     .comment_area .comment-content .comment-meta p {
-      margin-bottom: 15px;
+	  margin-bottom: 15px;
+	  margin-left: 18%;
       font-size: 14px;
       line-height: 2;
       font-weight: 500; }
@@ -1645,7 +1650,7 @@ h3 {
     box-shadow: none;
     border-bottom-color: #b0c364; }
 .contact-form-area textarea.form-control {
-  height: 190px; }
+  height: 160px; }
 
 .map-area {
   position: relative;
@@ -2474,7 +2479,7 @@ li.penci-mega-menu > ul.sub-menu {
 	display: table;
 }
 #navigation .penci-megamenu .penci-mega-child-categories {
-	width: 230px;
+	width: 20%;
 	display: table-cell;
 	vertical-align: top;
 	background: #ffffff;
@@ -3395,15 +3400,16 @@ li.penci-mega-menu > ul.sub-menu {
 .header-header-7.has-bottom-line {
 	border-bottom: 1px solid #ECECEC;
 }
-#header .inner-header {
+.inner-header {
 	width: 100%;
 	background-size: cover;
 	position: relative;
 	background-position: center center;
 	background-repeat: no-repeat;
+	border-bottom: 1px solid #ECECEC;
 }
-#header .inner-header .container {
-	padding: 40px 0;
+.inner-header .container {
+	padding: 10px 0;
 	text-align: center;
 	position: relative;
 	overflow: hidden;
@@ -6163,7 +6169,7 @@ ul.penci-grid {
 	transition: opacity 0.3s;
 	-webkit-transition: opacity 0.3s;
 	-moz-transition: opacity 0.3s;
-	margin-bottom: 28px;
+	margin-bottom: 18px;
 	width: 100%;
 }
 .penci-grid li .item .thumbnail .icon-post-format,
@@ -8576,7 +8582,7 @@ article.page.type-page {
 .post-author {
 	margin: 0;
 	overflow: hidden;
-	padding: 38px 0 37px 0;
+	padding: 15px 0;
 	border-top: 1px solid #E0E0E0;
 }
 body.author .post-author{
@@ -10135,8 +10141,8 @@ ul.footer-menu{
 }
 .widget ul.side-newsfeed li {
 	list-style-type: none;
-	margin-bottom: 20px;
-	padding-bottom: 20px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
 	margin-left: 0;
 	position: relative;
 	border-bottom: 1px solid #DEDEDE;
