--- a/app/app/views/comments/_form.html.erb
+++ b/app/app/views/comments/_form.html.erb
@@ -7,11 +7,11 @@
       <!-- Reply Form -->
       <div class="contact-form-area">
         <form action="#" method="post">
-          <div class="col-12">
+          <div class="col-10">
           <%= f.text_area :content, class: "form-control", cols: "30", rows: "10", placeholder: "Your comment..." %>
           </div>
           <div class="col-12">
-            <button class="btn bueno-btn mt-30" type="submit">Submit Comment</button>
+            <button class="btn bueno-btn" type="submit">Submit Comment</button>
           </div>
       </div>
       </form> 
