--- a/app/app/views/recipes/_recipe_side.html.erb
+++ b/app/app/views/recipes/_recipe_side.html.erb
@@ -1,15 +1,24 @@
+<style>
+  .pre-side {
+    position: absolute;
+    bottom: 1%;
+    left: 5%;
+  }
+  .pre-side p {
+    color: yellow;
+    font-weight: bold;
+  }
+</style>
+
 <% recipes.each do |recipe| %>
     <li class="penci-feed">
-      <span class="order-border-number right-side">
-        <span class="number-post">1</span>
-      </span>
       <div class="side-item">
         <div class="side-image thumbnail-right recipe-image p-relative" style="height:auto;">
-          <a href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>" class="recipe-name"></a>
+
             <div class="small-fix-size">
-              <img src="<%= recipe.image %>" alt="">
+              <a class="penci-image-holder small-fix-size" style="background-image: url(<%= recipe.image %>)" href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>"></a>
               <% if recipe.is_premium? %>
-                <div class="premium-label">
+                <div class="pre-side">
                   <p>Premium</p>
                 </div>
               <% end %>
@@ -28,4 +37,4 @@
         </div>
       </div>
     </li>
-<%end %>
+<% end %>
