--- a/app/app/views/recipes/show.html.erb
+++ b/app/app/views/recipes/show.html.erb
@@ -1,4 +1,3 @@
-<!-- ##### Post Details Area Start ##### -->
 <section class="recipe-detail post-news-area section-padding-100-0 mb-70">
   <div id="recipe-id" data-recipe_id="<%= @recipe.id %>"></div>
   <div class="container">
@@ -27,11 +26,11 @@
             <% end %>
             <br><br>
             <div class="post-meta mb-30">
-              <a href="#" class="post-date disabled"><%= I18n.l(@recipe.created_at) %></a>
+              <a href="#" class="post-date disabled"><%= @recipe.created_at.strftime("%b %d, %Y") %></a>
             </div>
-            <p>
+            <textarea readonly style="resize:none; display:table; width:100%; height: 600px; border:none; font-family:sans-serif; font-size:15px; color:#313131">
               <%= @recipe.recipe %>
-            </p>
+            </textarea>
           </div>
         </div>
       </div>
@@ -92,7 +91,7 @@
 					<h2 class="bold padding-bottom-7"><%= @recipe.get_average_rating ? @recipe.get_average_rating : "0.0" %> <small>/ 5 </small><i class="fas fa-star"></i></h2>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-md-5 col-sm-9">
 				<h4>Rating breakdown</h4>
         <%
           max_rating_count = 0
@@ -174,8 +173,8 @@
 		</div>
     <br>
 
-    <div class="comment_area clearfix mb-100">
-      <h4 class="mb-50">Comments</h4>
+    <div class="comment_area clearfix">
+      <h4 class="mb-30">Comments</h4>
       <%= render 'comments/form' %>
       <ol>
         <% @comments.each do |comment| %>
