--- a/app/app/views/recipes/_recipe_list.html.erb
+++ b/app/app/views/recipes/_recipe_list.html.erb
@@ -44,8 +44,8 @@
               <span><%= recipe.created_at.strftime("%b %d, %Y") %></span>
             </div>
           </div>
-          <div class="item-content">
-            <p style="overflow: hidden;text-overflow: ellipsis;height:80px;" href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>"><%= recipe.recipe %></p>
+          <div style="overflow: hidden;text-overflow: ellipsis;height:90px;" class="item-content">
+            <%= recipe.recipe.html_safe %>
           </div>
           <div class="penci-readmore-btn">
             <a class="penci-btn-readmore" href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>">Xem Tiếp<i class="fas fa-angle-double-right"></i></a>
