--- a/app/app/views/recipes/show.html.erb
+++ b/app/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <!-- Post Details Content Area -->
-      <div class="col-12 col-lg-8 col-xl-7">
+      <div class="col-12 col-lg-8 col-xl-8">
         <div class="post-details-content mb-100">
           <div class="blog-thumbnail mb-50 recipe-image full-width p-relative">
             <img src="<%= @recipe.image.url %>" alt="">
@@ -28,9 +28,9 @@
             <div class="post-meta mb-30">
               <a href="#" class="post-date disabled"><%= @recipe.created_at.strftime("%b %d, %Y") %></a>
             </div>
-            <textarea readonly style="resize:none; display:table; width:100%; height: 600px; border:none; font-family:sans-serif; font-size:15px; color:#313131">
-              <%= @recipe.recipe %>
-            </textarea>
+            <div id="recipe">
+              <%= @recipe.recipe.html_safe %>
+            </div>
           </div>
         </div>
       </div>
@@ -192,16 +192,16 @@
             <div class="comment-meta">
               <div class="d-flex">
                 <a href="#" class="post-author"><%= comment.user.username %></a>
-                <a href="#" class="post-date"><%= I18n.l(comment.created_at) %></a>
+                <a href="#" class="post-date"><%= comment.created_at.strftime("%d %b, %Y %H:%M") %></a>
                 <% if user_signed_in? %>
-                <% if comment.user_id == current_user.id %>
-                <a href="#" class="post-date" onclick=<%= formCmtShow%>>Reply</a>
-                <a href="#" class="post-date" onclick="$('#comment<%= comment.id%>').show()">Edit</a>
-                <a
-                  href="#"><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' }, class: "reply" %></a>
-                <% else %>
-                <a href="#" class="reply" onclick=<%= formCmtShow%>>Reply</a>
-                <% end %>
+                  <% if comment.user_id == current_user.id %>
+                    <a href="#" class="post-date" onclick=<%= formCmtShow%>>Reply</a>
+                    <a href="#" class="post-date" onclick="$('#comment<%= comment.id%>').show()">Edit</a>
+                    <a
+                      href="#"><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' }, class: "reply" %></a>
+                  <% else %>
+                    <a href="#" class="reply" onclick=<%= formCmtShow%>>Reply</a>
+                  <% end %>
                 <% end %>
               </div>
               <p><%= comment.content %></p>
