--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -134,6 +134,10 @@
 		<nav id="navigation" class="header-layout-top menu-style-2 penci-disable-sticky-nav">
 			<div class="container">
 				<ul id="menu-main-menu-1" class="menu">
+          <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-66">
+            <a href="/">Home</a>
+          </li>
+
 					<li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-1209">
 						<a href="recipes">CÔNG THỨC</a>
 						<ul class="sub-menu">
@@ -187,23 +191,8 @@
 						</ul>
 					</li>
 
-          <li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-940"><a href="#">Góc review</a>
-            <ul class="sub-menu">
-              <li class="menu-item-0">
-                <div class="penci-megamenu">
-                  <div class="penci-content-megamenu">
-                    <div class="penci-mega-latest-posts col-mn-5 mega-row-1">
-                      <div class="penci-mega-row penci-mega-106 row-active">                        
-                        <%= render 'layouts/nav_rv', recipes: @recipes_rv %>                        
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </li>
-
-          <li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-940"><a href="#">Góc review</a>
+          <li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-940">
+            <a href="#">Góc review</a>
             <ul class="sub-menu">
               <li class="menu-item-0">
                 <div class="penci-megamenu">
