--- a/app/app/views/recipes/_recipe_list_2.html.erb
+++ b/app/app/views/recipes/_recipe_list_2.html.erb
@@ -23,7 +23,7 @@
               </div>
               <% if user_signed_in? %>
                   <div class="col-md-3">
-                      <i class="recipe-bookmark text-danger recipe-name <%= current_user.bookmarks.where(recipe_id: recipe.id).first.nil? ? " far " : "fas " %> fa-heart fa-2x" data-recipe_id="<%= recipe.id %>" style="cursor: pointer"></i>
+                      <i class="recipe-bookmark text-danger recipe-name <%= current_user.bookmarks.where(recipe_id: recipe.id).first.nil? ? " far " : "fas " %> fa-heart fa-2x" data-recipe_id="<%= recipe.id %>" style="cursor: copy" title="Add to Bookmark!"></i>
                   </div>
               <% end %>
               <% if recipe.is_premium? %>
