--- a/app/app/views/user/profile.html.erb
+++ b/app/app/views/user/profile.html.erb
@@ -94,13 +94,13 @@
             <div class="row">
                 <div class="col-md-6 text-center">
                     <img src="<%= current_user.avatar ? current_user.avatar.url : 'assets/avatar/default-avatar.jpg' %>" alt="avatar">
-                    <%= f.file_field :avatar%>
+                    <%= f.file_field :avatar %>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="">Email (*)</label>
-                        <input type="email" autocomplete="email" class="form-control" name="user[email]" id="user_email"
-                            placeholder="Your Email *" value="<%= @user.email%>" />
+                        <input type="email" autocomplete="email" class="form-control" name="user[email]" 
+                            id="user_email" placeholder="Your Email *" value="<%= @user.email%>" required />
                     </div>
                     <div class="form-group">
                         <label for="">Username (*)</label>
