--- a/app/app/views/template/bueno/catagory-post.html.erb
+++ b/app/app/views/template/bueno/catagory-post.html.erb
@@ -76,7 +76,7 @@
 
         <!-- Logo Area -->
         <div class="logo-area">
-            <a href="index.html"><img src="img/core-img/logo2.png" alt=""></a>
+            <a href="index.html"><img src="img/core-img/vnf2.png" alt=""></a>
         </div>
 
         <!-- Navbar Area -->
