--- a/app/app/assets/stylesheets/style.css
+++ b/app/app/assets/stylesheets/style.css
@@ -1693,10 +1693,6 @@ h3 {
   position: relative;
 }
 
-.pagination {
-  margin: 30px 0;
-}
-
 .pagination span {
   padding: 5px 10px;
   margin: 5px;
@@ -1800,10 +1796,6 @@ ol, ul, li {
 }
 caption, th {
 	text-align: left
-}
-h1, h2, h3, h4, h5, h6 {
-	font-size: 100%;
-	font-weight: normal
 }
 q:before, q:after {
 	content: ''
@@ -3421,7 +3413,6 @@ li.penci-mega-menu > ul.sub-menu {
 	border-bottom: 1px solid #ECECEC;
 }
 .inner-header .container {
-	padding: 10px 0;
 	text-align: center;
 	position: relative;
 	overflow: hidden;
@@ -6264,6 +6255,12 @@ ul.penci-grid {
 .penci-grid .mixed-detail .item-content {
 	margin-top: 18px;
 	text-align: left;
+}
+.penci-grid li .item .item-content > h1, h2, h3 {
+	font-size: 14px;
+}
+.penci-grid li .item .item-content > p {
+	line-height: 22px;
 }
 .penci-post-box-meta.penci-post-box-grid {
 	border: none !important;
