--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               <div class="row">
                 <div class="col-lg-3">
                   <a class="logo" href="/">
-                    <img class="img-fluid" src="/assets/core-img/logo2.png" alt="">
+                    <img class="img-fluid" src="/assets/core-img/vnf.png" alt="">
                   </a>
                   <!-- Close Button -->
                   <div class="classycloseIcon">
@@ -222,7 +222,7 @@
       <div class="col-sm-4" style="margin:auto">
         <!-- Copywrite Text -->
         <a class="logo" href="#">
-          <img class="img-fluid" src="/assets/core-img/logo2.png" alt="">
+          <img class="img-fluid" src="/assets/core-img/vnf2.png" alt="">
         </a>
       </div>
     </div>
