--- a/app/app/views/recipes/show.html.erb
+++ b/app/app/views/recipes/show.html.erb
@@ -210,7 +210,7 @@
               <div id="comment<%= comment.id%>" style="display:none;" class="form-group">
                 <%= form_for(@comment, :url => url_for(:controller => 'comments', :action => 'update'), method: "put") do |f| %>
                 <%= f.hidden_field :id, value: comment.id%>
-                <input type="text" name="comment[content]" class="form-control" value=<%= comment.content%> >
+                <input type="text" name="comment[content]" class="form-control" value="<%= comment.content %>" >
                 <div class="row">
                   <div class="col-6">
                     <button class="btn mt-30 pull-right" type="submit" style="background-color:#b0c364;color:#fff;">Update
