--- a/app/app/views/homepage/home.html.erb
+++ b/app/app/views/homepage/home.html.erb
@@ -28,7 +28,7 @@
 		<div id="main" class="penci-layout-grid-2 penci-main-sticky-sidebar" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
 			<div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static;">
         		<div class="penci-border-arrow penci-homepage-title penci-home-latest-posts style-2 pcalign-left">
-					<h3 class="inner-arrow">Bài đăng mới nhất</h3>
+					<h3 class="inner-arrow">Latest Recipes</h3>
 				</div>
 				<div class="penci-wrapper-posts-content">
         
@@ -44,7 +44,7 @@
 
 				<section class="home-featured-cat mag-cat-style-3">
 					<div class="penci-border-arrow penci-homepage-title penci-home-latest-posts style-2 pcalign-left">
-            			<h3 class="inner-arrow">Được yêu thích</h3>
+            			<h3 class="inner-arrow">TOP BOOKMARKED</h3>
 					</div>
 					<div class="home-featured-cat-content style-3">
 						<%= render 'recipes/recipe_list_2', recipes: @recipes_rcm %>
@@ -53,19 +53,19 @@
 
 				<section class="home-featured-cat mag-cat-style-1">
 					<div class="penci-border-arrow penci-homepage-title penci-home-latest-posts style-2 pcalign-left">
-						<h3 class="inner-arrow">Góc review</h3>
+						<h3 class="inner-arrow">Review</h3>
 					</div>
 					<div class="home-featured-cat-content style-1">
 						<div class="cat-left">
 							<div class="mag-post-box first-post">
 								<div class="magcat-thumb">
-									<a class="penci-image-holder" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2020/02/28-1.jpg?resize=533%2C390&amp;ssl=1&#39;);" href="#"></a>
+									<a class="penci-image-holder" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2020/02/28-1.jpg?resize=533%2C390&amp;ssl=1&#39;);" href="http://localhost:8080/recipes/1"></a>
 								</div>
 								<div class="magcat-detail">
 									<div class="mag-header">
-										<h3 class="magcat-titlte"><a href="#">Món ngon dân dã ngày xuân – CÁCH LÀM BÁNH ĐÚC LẠC BẰNG CHẢO &amp; BẾP TỪ</a></h3>
+										<h3 class="magcat-titlte"><a href="http://localhost:8080/recipes/1">Thai Binh casted rice cake - Specialty rice countryside</a></h3>
 										<div class="grid-post-box-meta mag-meta">
-											<span>February 6, 2020</span>
+											<span>June 10, 2020</span>
 										</div>
 									</div>			
 								</div>
@@ -88,9 +88,9 @@
     </h4>
 			<div class="about-widget pc_aligncenter">
 																				<img class="penci-widget-about-image holder-square penci-lazy" src="/assets/core-img/vnf2.png" alt="Author" style="border-radius: 50%; display: inline;">
-									<p>Căn Bếp nhà Esheep. Góc nhỏ mày mò chia sẻ công thức nấu ăn, làm bánh, review đồ bếp. Chia sẻ tình yêu gia đình, bếp, vườn, chụp ảnh, du lịch...</p>
+									<p>Small corner to share recipes, review Vietnamese food</p>
 			</div>
-			</aside><aside id="penci_social_widget-2" class="widget penci_social_widget"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Liên hệ với tôi</span></h4>
+			</aside><aside id="penci_social_widget-2" class="widget penci_social_widget"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">CONTACT ME</span></h4>
 			<div class="widget-social pc_aligncenter">
 									<a href="#" target="_blank"><i class="fab fa-facebook-f" style="font-size: 15px"></i><span style="font-size: 13px">Facebook</span></a>
 									<a href="#" target="_blank"><i class="fab fa-instagram" style="font-size: 15px"></i><span style="font-size: 13px">Instagram</span></a>
@@ -107,7 +107,7 @@
 
 
       <aside id="penci_popular_news_widget-2" class="widget penci_popular_news_widget">
-        <h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Bài đăng nổi bật</span></h4>
+        <h4 class="widget-title penci-border-arrow"><span class="inner-arrow">TOP RATE</span></h4>
 				  <ul class="side-newsfeed display-order-numbers recipe-item">
           	<%= render 'recipes/recipe_side', recipes: @recipes_side %>
 					</ul>
@@ -118,7 +118,7 @@
 				<h4 class="widget-title penci-border-arrow">
 					<span class="inner-arrow">Facebook</span>
 				</h4>
-				<div class="fb-page fb_iframe_widget" data-href="https://www.facebook.com/esheepkitchenvn/" data-height="290" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="adapt_container_width=true&amp;app_id=&amp;container_width=340&amp;height=290&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Fesheepkitchenvn%2F&amp;locale=en_US&amp;sdk=joey&amp;show_facepile=true&amp;show_posts=true&amp;small_header=false">
+				<div class="fb-page fb_iframe_widget" data-height="290" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="adapt_container_width=true&amp;app_id=&amp;container_width=340&amp;height=290&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Fesheepkitchenvn%2F&amp;locale=en_US&amp;sdk=joey&amp;show_facepile=true&amp;show_posts=true&amp;small_header=false">
 					<span style="vertical-align: bottom; width: 340px; height: 290px;">
 						<iframe width="1000px" height="290px" data-testid="fb:page Facebook Social Plugin" title="fb:page Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border: none; visibility: visible; width: 340px; height: 290px;"></iframe>
 					</span>
@@ -132,9 +132,9 @@
 				<div class="textwidget">
 					<p>
 					<div class="fluid-width-video-wrapper" style="padding-top: 50%;">
-						<iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" name="fitvid0"></iframe></div><br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allowfullscreen="" name="fitvid1"></iframe></div> <br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allowfullscreen="" name="fitvid2"></iframe></div></p></div></aside></div></aside><aside id="jr_insta_slider-5" class="widget jr-insta-slider"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">INSTAGRAM</span></h4>Instagram requires authorization to view a user profile. Use autorized account in widget settings</aside><aside id="categories-5" class="widget widget_categories"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Danh mục</span></h4>		
+						<iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" name="fitvid0"></iframe></div><br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allowfullscreen="" name="fitvid1"></iframe></div> <br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="https://www.youtube.com/embed/8LMgxCfPb20" frameborder="0" allowfullscreen="" name="fitvid2"></iframe></div></p></div></aside></div></aside><aside id="jr_insta_slider-5" class="widget jr-insta-slider"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">INSTAGRAM</span></h4>Instagram requires authorization to view a user profile. Use autorized account in widget settings</aside><aside id="categories-5" class="widget widget_categories"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">CATEGORIES</span></h4>		
         <ul>
-  				<li class="cat-item cat-item-19"><a href="#">Công thức<span class="category-item-count">(<%= Recipe.count %>)</span></a>
+  				<li class="cat-item cat-item-19"><a href="recipes">Recipes<span class="category-item-count">(<%= Recipe.count %>)</span></a>
             <ul class="children">
             <% Category.all.each do |category| %>
 				<li class="cat-item cat-item-8">
