--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -139,25 +139,25 @@
           </li>
 
 					<li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-1209">
-						<a href="recipes">CÔNG THỨC</a>
+						<a href="recipes">RECIPES</a>
 						<ul class="sub-menu">
 							<li class="menu-item-0">
 								<div class="penci-megamenu">
 									<div class="penci-mega-child-categories">
 										<a class="mega-cat-child" href="#" data-id="penci-mega-1">
-											<span>Bánh mì</span>
+											<span>Hanoi foods</span>
 										</a>
 										<a class="mega-cat-child" href="#" data-id="penci-mega-2">
-											<span>Bánh ngọt</span>
+											<span>Saigon foods</span>
 										</a>
 										<a class="mega-cat-child" href="#" data-id="penci-mega-3">
-											<span>Bánh ngọt</span>
+											<span>Central foods</span>
 										</a>
 										<a class="mega-cat-child" href="#" data-id="penci-mega-4">
-											<span>Bánh ngọt</span>
+											<span>Tet foods</span>
 										</a>
 										<a class="mega-cat-child" href="#" data-id="penci-mega-5">
-											<span>Bánh ngọt</span>
+											<span>Summer foods</span>
 										</a>
 										<a class="mega-cat-child all-style" href="#" data-id="penci-mega-6">
 											<span>All</span>
@@ -170,19 +170,19 @@
                         <%= render 'layouts/nav', recipes: @recipes_1 %>
 											</div>
 											<div class="penci-mega-row penci-mega-2" style="display: none;">
-                        <%= render 'layouts/nav', recipes: @recipes_1 %>
+                        <%= render 'layouts/nav', recipes: @recipes_2 %>
 											</div>
 											<div class="penci-mega-row penci-mega-3" style="display: none;">
-                        <%= render 'layouts/nav', recipes: @recipes_1 %>
+                        <%= render 'layouts/nav', recipes: @recipes_3 %>
 											</div>
 											<div class="penci-mega-row penci-mega-4" style="display: none;">
-                        <%= render 'layouts/nav', recipes: @recipes_1 %>
+                        <%= render 'layouts/nav', recipes: @recipes_4 %>
 											</div>
 											<div class="penci-mega-row penci-mega-5" style="display: none;">
-                        <%= render 'layouts/nav', recipes: @recipes_1 %>
+                        <%= render 'layouts/nav', recipes: @recipes_5 %>
 											</div>
 											<div class="penci-mega-row penci-mega-6" style="display: none;">
-                        <%= render 'layouts/nav', recipes: @recipes_1 %>
+                        <%= render 'layouts/nav', recipes: @recipes_rd %>
 											</div>
 										</div>
 									</div>
@@ -192,7 +192,7 @@
 					</li>
 
           <li class="menu-item menu-item-type-taxonomy menu-item-object-category penci-mega-menu menu-item-940">
-            <a href="#">Góc review</a>
+            <a href="#">Review</a>
             <ul class="sub-menu">
               <li class="menu-item-0">
                 <div class="penci-megamenu">
@@ -237,13 +237,13 @@
     <div class="container">
       <div class="footer-socials-section">
         <ul class="footer-socials">
-          <li><a href="https://www.facebook.com/esheepkitchenvn/" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
-          <li><a href="https://www.esheepkitchen.com/about-me/#" target="_blank"><i class="fab fa-twitter"></i><span>Twitter</span></a></li>
-          <li><a href="https://www.esheepkitchen.com/about-me/#" target="_blank"><i class="fab fa-google-plus-g"></i></i><span>Google +</span></a></li>
-          <li><a href="https://www.esheepkitchen.com/about-me/#esheepkitchen" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
-          <li><a href="https://www.esheepkitchen.com/about-me/#" target="_blank"><i class="fab fa-pinterest"></i><span>Pinterest</span></a></li>
-          <li><a href="https://www.youtube.com/channel/UCHZ_UB-Nh7L4Fmxz27MFJDQ" target="_blank"><i class="fab fa-youtube"></i><span>Youtube</span></a></li>
-          <li><a href="mailto:phanngocanh11@gmail.com"><i class="far fa-envelope"></i><span>Email</span></a></li>																																	
+          <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-twitter"></i><span>Twitter</span></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></i><span>Google +</span></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-pinterest"></i><span>Pinterest</span></a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-youtube"></i><span>Youtube</span></a></li>
+          <li><a href="#"><i class="far fa-envelope"></i><span>Email</span></a></li>																																	
         </ul>
       </div>
       <div class="footer-logo-copyright footer-not-logo footer-not-gotop">		
