--- a/app/app/views/template/contact.html.erb
+++ b/app/app/views/template/contact.html.erb
@@ -3,47 +3,34 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8 col-xl-9">
         <div class="contact-content mb-100">
-          <h4 class="mb-50">We love seeing your feedback</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tristique justo id elit bibendum pharetra non
-            vitae lectus. Mauris libero felis, dapibus a ultrices sed, commodo vitae odio. Sed auctor tellus quis arcu
-            tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac tincidunt nunc. Cras sed mollis
-            erat.</p>
+          <h4 class="mb-50">About Us</h4>
 
-          <div class="row align-items-center mt-30 mb-50">
-            <div class="col-12 col-lg-4">
-              <!-- Single Contact Info -->
-              <div class="single-contact-info d-flex align-items-center">
-                <div class="icon mr-15">
-                  <img src="assets/core-img/placeholder.png" alt="">
+        <div class="col-md-12 login-form-1">
+			<br>
+		
+			<div class="row">
+                <div class="col-md-6 text-center">
+                    <img src="https://image.thanhnien.vn/660/uploaded/2014/pictures20134/phuongthanh/master5/master7.jpg" alt="avatar">
                 </div>
-                <p>1481 Creekside Lane Avila Beach, CA 931</p>
-              </div>
-
-              <!-- Single Contact Info -->
-              <div class="single-contact-info d-flex align-items-center">
-                <div class="icon mr-15">
-                  <img src="assets/core-img/smartphone.png" alt="">
+                <div class="col-md-6">
+					<h4>Christine Hà</h4>
+					<p>
+						Christine Huyen Tran Hà is an American chef, writer and TV host. She is the first blind
+						contestant of MasterChef and the winner of its third season in 2012
+					</p>
+					<p>
+						Born: May 9, 1979 (age 40 years)
+					</p>
+					<p>
+						Books: Recipes from My Home Kitchen
+					</p>
+					<p>
+						Education: The University of Texas at Austin, University of Houston
+					</p>
                 </div>
-                <p>+53 345 7953 32453</p>
-              </div>
-
-              <!-- Single Contact Info -->
-              <div class="single-contact-info d-flex align-items-center">
-                <div class="icon mr-15">
-                  <img src="assets/core-img/message.png" alt="">
-                </div>
-                <p>yourmail@gmail.com</p>
-              </div>
             </div>
-            <div class="col-12 col-lg-8">
-              <!-- ##### Google Maps ##### -->
-              <div class="map-area">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.0977424815455!2d105.8501706501119!3d21.028774735929655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab953357c995%3A0x1babf6bb4f9a20e!2zSOG7kyBIb8OgbiBLaeG6v20!5e0!3m2!1svi!2s!4v1585726341788!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-                </iframe>
-              </div>
-            </div>
-          </div>
+        </div>
+
         </div>
       </div>
     </div>
